# AiGuider

./: .cursorignore  .gitignore  README.md  a.patch  setup_backend.sh  start_backend.sh  start_frontend.sh  后端环境安装指南.md  遗留事项.md
.cursor/rules/: code-rules.mdc
.qoder/quests/: user-readme-guide.md
aiGuider_Client/: README.md  build.gradle
aiGuider_Client/android/: README.md
aiGuider_Client/android/app/: build.gradle
aiGuider_Client/android/app/src/main/java/com/example/simpleandroidapp/: MainActivity.java
aiGuider_Client/android/app/src/main/res/layout/: activity_main.xml
aiGuider_Client/android/app/src/main/res/values/: strings.xml
aiGuider_Client/app/src/main/: AndroidManifest.xml
aiGuider_Client/web/: README.md  index.html  script.js  styles.css
aiGuider_Server/: .env  README.md  pyproject.toml  requirements.txt  start_server.py
aiGuider_Server/app/: __init__.py  main.py
aiGuider_Server/app/api/: __init__.py  api.py
aiGuider_Server/app/api/endpoints/: __init__.py  ar_guide.py  chat.py  health.py  session.py
aiGuider_Server/app/core/: __init__.py  config.py  errors.py
aiGuider_Server/app/db/: __init__.py  base.py  models.py
aiGuider_Server/app/schemas/: __init__.py  requests.py  responses.py
aiGuider_Server/app/services/: __init__.py  ai_service.py  session_service.py
aiGuider_Server/app/services/ar/: __init__.py  ar_query_service.py
aiGuider_Server/app/services/ar/langgraph_agent/: README.md  __init__.py  main.py
aiGuider_Server/app/services/ar/langgraph_agent/config/: __init__.py  error_codes.py  model_config.py  model_configs.json
aiGuider_Server/app/services/ar/langgraph_agent/graph/: __init__.py  builder.py  graph.py  nodes.py  state.py
aiGuider_Server/app/services/ar/langgraph_agent/llms/: __init__.py  qwen.py  temp.py
aiGuider_Server/app/services/ar/langgraph_agent/prompts/: __init__.py  system.py  templates.py  thinker.py  tour_guide.py
aiGuider_Server/app/services/ar/langgraph_agent/prompts/templates/: tour_guide.md
aiGuider_Server/app/services/ar/langgraph_agent/tools/: __init__.py  image_analyzer.py  knowledge_retriever.py  knowledge_searcher.py
aiGuider_Server/app/services/ar/langgraph_agent/utils/: __init__.py  image_utils.py
aiGuider_Server/app/services/session/: __init__.py  session_manager.py  session_model.py
aiGuider_Server/app/utils/: helpers.py  image_processor.py
aiGuider_Server/doc/: API_for_Web.md  后端会话管理技术文档.md
